hmecloud/client/src/components/Report/SummaryReport.css
/* ... */
.goalstatistics-table.goalstatistics-table-content{
  font-size: 12px;
  font-weight: normal;
  border-bottom: 1px solid #aeaeae;
  width: 1005px;/* newly added */
}

.goalstatistics-table.goalstatistics-table-header{
  border-bottom: none;
  width: 1005px;/* newly added */
}
.goalstatistics-header-text{
  color: #008898;
  font-size: 17px;
  line-height: 20px;
  font-weight: 800;
  text-transform: uppercase;
}

/* Goal Statistics css ends here*/




/* Raw Car Data CSS*/

.emailCSV {
    padding: 10px;
    margin: 10px 15px;
    background-color: #d41b3e !important;
    border: none;
    color: #ffffff;
    cursor: pointer;
}


.rawcar-data-section{
  /* margin: 20px 68px 0px 68px; */
}

tr.raw-car-subheaders th:nth-child(1),tr.raw-car-subheaders th:nth-child(2){
  width: 226px;
}
tr.raw-car-subheaders th{
  width: 113px;
}


.clear:after {
  clear: both;
  content: ".";
  display: block;
  font-size: 0;
  height: 0;
  visibility: hidden;
}
table .raw-car-header-labels {
  border-bottom: 0px solid #d1d1d1;
}
table .th {
  align-items: left;
}
.rawcar-header-labels {
  font-size: 12px;
  margin-left: 10px;
  padding-top: 8px;
  padding-bottom: 8px;
  text-align: left;
  width: 850px;
}
.rawcar-table-details {
  margin-left: 1em;
}
.thin-header {
  width: 115px;
}
.rawcar-header {
  border: 1px solid #ffffff;
  display: table;
  height: 36px;
}
.rawcar-h1 {
  margin-top: 10px;
}
.rawcar-h2 {
  color: #0087a1;
  /* margin-left: 7.5em; */
  font-weight: bolder;
  font-size: 18px;
  margin-top: 10px;
}
.display-records {
  border-collapse: collapse;
  /* border-spacing: 0px; */
  font-size: 12px;
  float: left;
  padding-top: 0px;
  width: 1130px;
}
.table-layout {
  margin-top: 0px;
  margin-bottom: 25px;
  width: 1125px;
}
.table-layout th {
  /* font-weight: bold; */
  font-size:12px;
  height: 30px;
}
.table-layout th span{
  /* font-weight: bold; */
  font-size:10px;
  height: 30px;
}

.table-layout th{
	/* background:url(/images/th_background_up.png); */
	background-color: #0087a1;
	border-top:1px solid #FFFFFF;
	border-left:1px solid #FFFFFF;
	color:white;
    vertical-align:middle;
    text-align: center;
}
.display-result{
    background-color: #ffffff;
    text-align: center
}

.display-records  tr:nth-child(odd){
    background-color: #ffffff;
}
.display-records  tr:nth-child(even){
    background-color: #ededed;;
}



/* systemStatiscs CSS */
.lane1 {
  text-align: left;
  padding-left: 15px;
}

.table-layout-System th {
  background-color: #0087a1;
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  color: white;
  height: 36px;
  vertical-align: middle;
}
.col-width-ss5 {
  width: 300px;
}
h2.rep-head {
  margin-bottom: 3px;
}

#page-container h2 {
  color: #008898;
  font-size: 17px;
  line-height: 20px;
  font-weight: 800;
}

#ss-col-width {
  height: 21px;
}
.table-layout-System.ssBord td {
  border-left: 0px solid white;
  padding-left: 25px;
  text-align: left;
}
.rnshade {
  background-color: #ffffff;
}
#ss-col-width-sm {
  padding-right: 35px;
}
.rshade {
  background-color: #ededed;
}
#page-container table {
  border-collapse: separate;
  border-bottom: 1px solid #aeaeae;
}





.lastTd {
    border-left: 1px solid #aeaeae;
    border-right: 1px solid white;
    border-top: 1px solid #aeaeae;
    width: 125px;
}
.headerColumn {
    width: 125px !important;
    border-right: 0px solid gray;
}
.longtime-timeSpan {
    font-size: 10px;
    font-weight: 500;
}

.table-layout td {
    border-top: 1px solid #FFFFFF;
    border-left: 1px solid #FFFFFF;
    text-align: center;
    vertical-align: middle;
}
.rshade {
    background-color: #ededed;
}
.boldin {
    font-weight: bold;
}
.daypart td {
    height: 42px;
}
table.longest td {
    line-height: .9;
}

.colWidth5 {
    width: 175px;
}

.rshade {
    background-color: #ededed;
}
.rnshade {
    background-color: #ffffff;
}

.table-layoutRawCar {
    margin-left: 0px;
}
.rawCarContainer{
    width:100%;
}

span.redFont {
    color: #D41B3E;
    font-size: 18px;
    line-height: 0;
}
.goalNote {
    color: #777;
    font-size: 12px;
    margin-right: 125px;
    margin-bottom: 3px;
    text-align: right;
}
.downloadOptionsSection {
    position: relative;
    display:flex;

}
.downloadOptions {
    position: absolute;
    left: 0;
    right: 0;
}

.downloadOptions {
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    display: block;
    cursor: pointer;
    background: #ededed;
    color: #06b1cb;
    font-weight: bold;
    font-size: 12px;
    text-decoration: none;
    width: 130px;
    z-index: 1;
}
    .downloadOptions div {
        border: 1px solid #06b1cb !important;
        padding: 5px;
        text-align:center;
    }
        .downloadOptions div:hover {
            background-color: #06b1cb;
            color:white;
        }
        .reportsummary-container .download-btn-section {
            width: 200px;
            position: relative;
        }

        
        
.download-summaryreport-btn {
    background-color: #06b1cb;
    text-align: center;
    border-bottom: none;
    color: #ffffff;
    cursor: pointer;
    padding: 10px 10px;
    font-size: 1.12em;
    font-weight: normal;
    width: 130px;
    border-radius: 0;
}

.label-heading{
    display: inline-block;
    max-width: 100%;
    margin-bottom: 0 !important;
    font-weight: normal;
    margin-left: 7px;
}

span.StoreTitile.level-0 {
    display: inline-block;
    width: 400px !important;
    white-space: nowrap;
    overflow: hidden;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    /* padding-left: 5px; newly added */
}


span.StoreBrand {
    width: 50px;
    text-align: left;
    width: 136%;
    display: inline-block;
}


.saved-reports .rc-tree-node-content-wrapper {
    width: 220px !important;
}

.storeTree {
    display: inline-flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
}
/* ... */

